--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,28 @@
+body
+{
+	background: #e5f3f6;
+}
+h1
+{
+	font-family: Open Sans;
+	font-weight: 300;
+	font-size: 90px;
+	color: #b2c5c7;
+	text-align: center;
+	margin-bottom: 0!important;
+	margin-top: 200px;
+}
 p
 {
 	font-family: Open Sans;
 	font-weight: 300;
-	font-size: 100px;
+	font-size: 20px;
+	color: #b2c5c7;
+	text-align: center;
+	margin-top: 0!important;
 }
-i
+p span
 {
-	color: #ff0000;
+	color: #119BC8;
+	text-decoration: underline;
 }
